--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "llm-structured-response-test",
+  "name": "llm-structured-response-benchmark",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,11 +14,14 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.0-beta.62",
     "@ai-sdk/google": "^3.0.0-beta.58",
+    "@ai-sdk/groq": "^2.0.31",
     "@ai-sdk/openai": "^3.0.0-beta.69",
+    "@openrouter/ai-sdk-provider": "^1.2.8",
     "ai": "^6.0.0-beta.119",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.5.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.13"
   },
